[gd_scene load_steps=5 format=3 uid="uid://dcgkqubno5qmk"]

[ext_resource type="Script" path="res://OutsideSkyline_Alpha/Script/Dialog/DialogBox.gd" id="1_wx68y"]
[ext_resource type="FontFile" uid="uid://4hxhewmwpgm8" path="res://OutsideSkyline_Alpha/Font/JetBrainsMono-Medium.ttf" id="2_xiuwo"]

[sub_resource type="LabelSettings" id="LabelSettings_0ehcn"]
font = ExtResource("2_xiuwo")
font_size = 36
font_color = Color(0.854902, 0.752941, 0.192157, 1)
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_h12bi"]
font = ExtResource("2_xiuwo")
font_size = 36
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[node name="DialogBox" type="CanvasLayer"]
script = ExtResource("1_wx68y")

[node name="DialogContent" type="HBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
offset_bottom = -90.9999
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Speaker" type="Label" parent="DialogContent"]
layout_mode = 2
size_flags_horizontal = 4
text = "Speaker:"
label_settings = SubResource("LabelSettings_0ehcn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Content" type="Label" parent="DialogContent"]
layout_mode = 2
size_flags_horizontal = 4
text = "This is dialog content"
label_settings = SubResource("LabelSettings_h12bi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogTimer" type="Timer" parent="."]
wait_time = 1.7

[connection signal="timeout" from="DialogTimer" to="." method="_on_dialog_timer_timeout"]
